[package]
name = "avritv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
near-rng = "0.1.1"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
chrono = "0.4.19"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
ito = true
debug = false
panic = "abort" 
overflow-checks = true